api router user info added
