# expertfy-api/src/domain/models/accountInfoModel.ts
@@ -1,0 +1,17 @@
+
+export interface accountInfoModel  {
+  id?: string;
+  name: string;
+  lastName: string;
+  birthDate: Date;
+  email: string;
+  photo: string;
+  phone: string;
+  linkedin?: string;
+  team?: string;
+  employmentStartDate: Date;
+  language: string;
+  seniority: string;
+  area: string;
+  office: string;
+}
