# expertfy-api/src/domain/respositories/userRepository.ts
@@ -2,6 +2,7 @@ import { userModel } from "../models/userModel";
 import { userRepository } from "../interfaces/repositories/userRepository";
 import { userDataSource } from "../../data/interfaces/data-sources/userDataSource";
 import { expertListModel } from "../models/expertListModel";
+import { accountInfoModel } from "../models/accountInfoModel";
 
 export class userRepositoryImpl implements userRepository {
   private userDataSource: userDataSource;
@@ -38,5 +39,10 @@ export class userRepositoryImpl implements userRepository {
   public async getUsersAndCountByCompetenceId(competenceId: string): Promise<expertListModel[]> {
     const users = await this.userDataSource.getUsersAndCountByCompetenceId(competenceId);
     return users;
+  }
+
+  public async getUserAccountInfo(id: string): Promise<accountInfoModel> {
+    const userAccountInfo = await this.userDataSource.getUserAccountInfo(id);
+    return userAccountInfo;
   }
 }
